# Torque-simulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  todo.md  torque-simulation
src/: main.cpp
